this is do somthing

--- a/index.html
+++ b/index.html
@@ -3,9 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fist commit</title>
+    <title>File Style</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello this projecct in this file</h1>
+    <header class="headerpart">
+        <div class="inside-part">
+            <div class="content">
+                <h1>Hello wellCome to my website</h1>
+            <button>Contact Me</button>
+            </div>
+        </div>
+    </header>
+    <div class="about-part">
+        <h2>About Me</h2>
+        <hr class="border"/>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum accusamus deleniti impedit tenetur fuga, magnam debitis eligendi fugit molestiae obcaecati?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, dolore cumque corporis quam voluptatibus porro itaque doloribus quidem minus sapiente mollitia temporibus eos aliquid assumenda labore illum eum maxime soluta. Ipsum inventore unde asperiores esse mollitia incidunt sed consectetur eaque molestias et ex, reiciendis, assumenda voluptatibus dignissimos in! Iusto error exercitationem, totam labore itaque veniam, dignissimos temporibus quibusdam voluptates nulla soluta, deleniti incidunt distinctio. Ex, quidem rerum! Odit ad libero dolores temporibus magni fugit dicta enim repudiandae, obcaecati ratione? Perspiciatis ipsa minus minima nulla labore commodi fuga, voluptas doloremque corrupti nobis ratione libero impedit non. Excepturi at corrupti illum blanditiis.</p>
+
+        <a class="ancore" href="https://fast.com/" target="_blank">Check Internet Speed</a>
+    </div>
+    <div class="contact">
+        <div class="named">
+            <label for="#">First Name</label>
+            <input type="text">
+            <label for="#">First Name</label>
+            <input type="text">
+        </div>
+        <div class="email">
+            <label for="#">Email</label>
+            <input type="email">
+        </div>
+        <div class="password">
+            <label for="#">Password</label>
+            <input type="password">
+        </div>
+        <div class="submit">
+            <input type="submit" value="Submit">
+        </div>
+    </div>
 </body>
 </html>
